samples/_failures_safe/1761469460_665dd1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7990cc9c.c: In function ‘main’:
./samples/SAFE/__tmp_7990cc9c.c:154:17: error: expected declaration or statement at end of input
  154 |                 if (multiply_matrices(&a, &b, &result)) {
      |                 ^~
./samples/SAFE/__tmp_7990cc9c.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7990cc9c.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7990cc9c.c:154:17: error: expected declaration or statement at end of input
